[project]
name = "markdown-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "ebooklib>=0.18",
    "html2md>=0.1.7",
    "ipython>=9.4.0",
    "lxml>=5.4.0",
    "markdown>=3.8",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "sqlean-py>=3.49.1",
]
